system/observability/templates/route-alertmanager.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.farwydi.dev`)
      services:
        - name: observability-kube-prometh-alertmanager
          port: 9093
