system/observability/templates/route-grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.farwydi.dev`)
      services:
        - name: observability-grafana
          port: 80
