system/observability/templates/route-jaeger.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jaeger
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jaeger.farwydi.dev`)
      services:
        - name: observability-jaeger-query
          port: 16686
