system/observability/templates/route-prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.farwydi.dev`)
      services:
        - name: observability-kube-prometh-prometheus
          port: 9090
